# nrf52810

./: .gitignore  CMakeLists.txt  custom_targets.json  main.cpp  mbed_app.json
TARGET_NRF52810/: CMakeLists.txt
TARGET_NRF52810/device/TOOLCHAIN_GCC_ARM/: NRF52810.ld
